[gd_scene load_steps=3 format=3 uid="uid://d0ko0newwlg21"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_oke7b"]
[ext_resource type="AudioStream" uid="uid://50fitu17g6ge" path="res://assets/sounds/hurt.wav" id="2_lcnoe"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_oke7b")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SFX_Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_lcnoe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
